k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-pm
  labels:
    name: smart-pm
    app.kubernetes.io/part-of: smart-project-manager
